<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoprincipal"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageview1"
        android:layout_width="301dp"
        android:layout_height="310dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/manzana" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="197dp"
        android:background="@drawable/fondoet"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#0E0D0D"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/button_jugar"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="131dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="jugar"
        android:text="@string/button"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/bestscore"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="65dp"
        android:background="@drawable/fondoet"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:background="@android:color/darker_gray"
        android:text="@string/credit"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>